--- a/css/gridbox-nav-mobile.css
+++ b/css/gridbox-nav-mobile.css
@@ -5,6 +5,8 @@
   width: 50px;
   height: 50px;
   background: #eee;
+  -webkit-box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.3);
   border: 1px solid #eee;
   border-radius: 50%;
   cursor: pointer;
