--- a/scss/gridbox-nav-fullscreenOvrly.scss
+++ b/scss/gridbox-nav-fullscreenOvrly.scss
@@ -112,7 +112,8 @@ $contrast-color: #550000;
     top: 0;
     left: 0;
     opacity: 0;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     background: $overlay-color;
     transition: opacity 0.5s;
     
@@ -140,7 +141,7 @@ $contrast-color: #550000;
     }
     
     .menuitem {
-        flex: 1;
+        flex: 1 1 auto;
         text-align: center;
         opacity: 0;
         visibility: hidden;   
