--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -10,3 +10,7 @@ $peach: #FFAAAA;
 $grapefruit: #e68181;
 $pear: #ffed84;
 $greenapple: #aedfa3;
+
+$logoblue: #488dc4;
+$logoblueDark: #2772B6;
+$lightblue: #7aafdb;
