--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -41,6 +41,9 @@ $insetBoxShadow: rgba(0, 0, 0, 0.5);
 // Color - Border
 $border: rgba(0, 0, 0, 0.15);
 
+// Box-Shadow
+
+
 // /* =======================================================================
 //  *                          Form Settings
 //  * ========================================================================
