--- a/scss/gridbox-nav-menu-submenu.scss
+++ b/scss/gridbox-nav-menu-submenu.scss
@@ -13,19 +13,12 @@
     
     @media (max-width: 768px) {
         position: relative;
-        height: 0px;
-
-        &.show {
-            margin-top: 15px;
-            height: auto;
-        }
     }
 
     a {
         display: inline-block;
-        padding: 0px 25px;
-        height: 52px;
-        line-height: 50px;
+        padding: 15px 25px;
+        line-height: 20px;
         text-decoration: none;
         transition: all 0.3s;
     }
@@ -37,16 +30,17 @@
 //  * ===================================================================
 //  */
 
-// color
+// transition effect for submenu collapsing
+// achieve by transition of max-height, and set height to auto meanwhile. This is the best solution for achieving this transition effect at the moment
 .sub {
-    // background: ;
+    @media (max-width: 768px) {
+        height: auto;
+        max-height: 0px;
+        overflow: hidden;
+        transition: max-height 0.4s ease-in;
 
-    a {
-        color: $black;
-        border-bottom: 2px solid rgba(0, 0, 0, 0);
-
-        &:hover {
-            border-bottom: 2px solid $black;
+        &.show {
+            max-height: 175px;  // each li is 52px height, max height would be greater than 52 * 3 + 15px margin top
         }
     }
 }
