--- a/scss/gridbox-nav-mordenize.scss
+++ b/scss/gridbox-nav-mordenize.scss
@@ -13,3 +13,4 @@
 @import 'gridbox-nav-menu-overlay';     // background overlay
 @import 'gridbox-nav-menu-mainmenu';    // main menu list
 @import 'gridbox-nav-menu-submenu';     // sub menu list
+@import 'gridbox-nav-menu-social';      // social icons
