--- a/css/gridbox-nav-mordenize.css
+++ b/css/gridbox-nav-mordenize.css
@@ -46,11 +46,27 @@
 
 .nav .main > li > a {
   color: #fff; }
+  .nav .main > li > a.sub-toggle::after {
+    border-top: 2px solid #488dc4;
+    border-right: 2px solid #488dc4; }
 
 .nav .sub a {
   color: #fff; }
   .nav .sub a:hover {
-    color: #2772B6; }
+    font-weight: 700; }
+
+.nav .social::before {
+  background: #fff; }
+
+.nav .social > span {
+  color: #fff; }
+
+.nav .social .icon {
+  color: #fff; }
+  .nav .social .icon:hover {
+    color: #488dc4; }
+    .nav .social .icon:hover::before {
+      background: #fff; }
 
 .menu-toggle {
   position: relative;
@@ -144,6 +160,7 @@
   -ms-flex-flow: wrap row;
   flex-flow: wrap row;
   position: relative;
+  width: auto;
   height: 40px;
   z-index: 100; }
   .brand img {
@@ -181,6 +198,11 @@
   transition: opacity 0.5s; }
   .overlay.show {
     opacity: 1; }
+  .overlay nav {
+    height: inherit; }
+    @media (max-width: 768px) {
+      .overlay nav {
+        height: auto; } }
   .overlay.grapefruit {
     background: #eeacac; }
   .overlay.peach {
@@ -198,8 +220,12 @@ ul.main {
   -webkit-box-direction: normal;
   -ms-flex-flow: wrap row;
   flex-flow: wrap row;
-  position: absolute;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  position: relative;
   width: 80%;
+  height: auto;
   top: 40%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
@@ -218,34 +244,68 @@ ul.main {
       -webkit-box-direction: normal;
       -ms-flex-flow: wrap column;
       flex-flow: wrap column;
-      top: 20%;
-      left: 50%;
-      -webkit-transform: translate(-50%, 0);
-      -ms-transform: translate(-50%, 0);
-      transform: translate(-50%, 0); } }
+      margin: 25vh auto 15vh auto;
+      top: auto;
+      left: auto;
+      -webkit-transform: translate(0%, 0);
+      -ms-transform: translate(0%, 0);
+      transform: translate(0%, 0); } }
 
 li.menuitem {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   position: relative;
-  margin-right: 15px;
   text-align: center; }
-  li.menuitem:last-child {
-    margin-right: 0; }
   @media (max-width: 768px) {
     li.menuitem {
-      margin-right: 0;
       margin-bottom: 15px; }
       li.menuitem:last-child {
         margin-bottom: 0; } }
   li.menuitem > a {
-    display: block;
-    padding: 25px 25px;
+    display: inline-block;
+    position: relative;
+    padding: 15px 25px;
     font-size: 1.5rem;
     font-weight: 600;
     text-align: center;
     text-decoration: none; }
+
+a.sub-toggle::before {
+  width: 14px;
+  height: 14px;
+  top: 50%;
+  right: -20px;
+  background: #fff;
+  opacity: 0.6;
+  border-radius: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%); }
+
+a.sub-toggle::after {
+  width: 5px;
+  height: 5px;
+  top: calc(50% - 2.5px);
+  right: -15px;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s; }
+
+a.sub-toggle.clicked::after {
+  top: calc(50% - 3px);
+  right: -15.5px;
+  -webkit-transform: rotate(135deg);
+  -ms-transform: rotate(135deg);
+  transform: rotate(135deg); }
+
+a.sub-toggle::before, a.sub-toggle::after {
+  content: "";
+  display: block;
+  position: absolute; }
 
 .main > li,
 .sub > li {
@@ -293,9 +353,32 @@ li.menuitem {
 .sub {
   position: absolute;
   width: 100%; }
+  .sub::before {
+    content: "";
+    display: block;
+    position: relative;
+    width: 0%;
+    -webkit-transition: width 0.3s ease-in-out;
+    -o-transition: width 0.3s ease-in-out;
+    transition: width 0.3s ease-in-out; }
   .sub.show > li {
     opacity: 1;
     visibility: visible; }
+  .sub.show::before {
+    content: "";
+    display: block;
+    position: relative;
+    width: 60%;
+    height: 1px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    background: #fff;
+    opacity: 0.3; }
+    @media (max-width: 768px) {
+      .sub.show::before {
+        width: 100%; } }
   @media (max-width: 768px) {
     .sub {
       position: relative; } }
@@ -304,9 +387,9 @@ li.menuitem {
     padding: 15px 25px;
     line-height: 20px;
     text-decoration: none;
-    -webkit-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s; }
+    -webkit-transition: all 0.1s;
+    -o-transition: all 0.1s;
+    transition: all 0.1s; }
 
 @media (max-width: 768px) {
   .sub {
@@ -318,3 +401,83 @@ li.menuitem {
     transition: max-height 0.4s ease-in; }
     .sub.show {
       max-height: 175px; } }
+
+.social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: fixed;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: wrap row;
+  flex-flow: wrap row;
+  -ms-flex-line-pack: justify;
+  align-content: space-between;
+  width: 50%;
+  height: auto;
+  left: 50%;
+  bottom: 30px;
+  padding: 25px;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%); }
+  @media (max-width: 768px) {
+    .social {
+      position: relative;
+      bottom: auto;
+      width: 90%; } }
+  .social::before {
+    content: "";
+    display: block;
+    position: relative;
+    width: 60%;
+    height: 1px;
+    left: 50%;
+    bottom: 30px;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    opacity: 0.3; }
+
+.social > span {
+  display: block;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 100%;
+  flex: 1 0 100%;
+  font-weight: 600;
+  font-size: 1.1rem;
+  text-align: center;
+  margin-bottom: 15px; }
+  @media (max-width: 768px) {
+    .social > span {
+      font-weight: 500;
+      font-size: 1rem; } }
+
+.social .icon {
+  display: inline-block;
+  position: relative;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto;
+  padding: 15px;
+  text-decoration: none;
+  text-align: center;
+  font-size: 20px;
+  line-height: 25px; }
+  .social .icon::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 35px;
+    height: 35px;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    z-index: -1;
+    background: transparent;
+    -webkit-transition: all 0.1s;
+    -o-transition: all 0.1s;
+    transition: all 0.1s; }
