--- a/scss/gridbox-nav-menu-overlay.scss
+++ b/scss/gridbox-nav-menu-overlay.scss
@@ -14,6 +14,13 @@
         opacity: 1;
     }
 
+    nav {
+        height: inherit;
+        @media (max-width: 768px) {
+            height: auto;
+        }
+    }
+
 // /* ===================================================================
 //  *                       Customizations
 //  * ===================================================================
